adaptive layout bug fixed

--- a/_sass/tale/_base.scss
+++ b/_sass/tale/_base.scss
@@ -15,7 +15,7 @@ html {
   font-size: 14px;
   overflow-y: scroll;
 
-  @media (min-width: 600px) {
+  @media (min-width: 750px) {
     font-size: 16px;
   }
 }
@@ -50,7 +50,7 @@ blockquote {
     margin-bottom: 0;
   }
 
-  @media (min-width: 600px) {
+  @media (min-width: 750px) {
     padding: 0 1rem 0 1.25rem;
   }
 }
